--- a/_dash_src.Rmd
+++ b/_dash_src.Rmd
@@ -3,16 +3,31 @@ title: "UATAQ Status Dashboard"
 ---
 <!-- Ben Fasoli -->
 
-Row
---------------------------------------------------------------------------------
-
-### Sites Reported Last 90 Minutes (`r strftime(Sys.time(), '%H:%M %Z')`)
-```{r}
+```{r setup}
 library(dplyr)
 library(flexdashboard)
 library(plotly)
 library(sendmailR)
-recent <- readRDS('/srv/shiny-server/map/shared/airmap.rds')$fixed
+
+# Find sites with <3 active references
+stats <- readRDS('data/stats.rds')
+needs_tank <- stats$site[stats$n_co2 < 3] %>% 
+  na.omit %>%
+  paste(collapse = ', ')
+
+# Find sites with recent data reports
+recent <- readRDS('data/airmap.rds')$fixed
+new_mask <- recent$Time_UTC >= (Sys.time() - 3600 * 1.5)
+needs_data <- recent$site[!new_mask] %>%
+  paste(collapse = ', ')
+```
+
+
+Row
+--------------------------------------------------------------------------------
+
+### Sites Online (`r strftime(Sys.time(), '%H:%M %Z')`) `r if (nchar(needs_data) > 0) paste(' - Deficit:', needs_data)`
+```{r}
 pct <- length(which(recent$Time_UTC >= (Sys.time() - 3600 * 1.5))) /
   nrow(recent) * 100
 if (pct < 70) {
@@ -26,14 +41,21 @@ gauge(round(pct), min = 0, max = 100, symbol = '%',
       gaugeSectors(c(99, 100), c(70, 98), c(0, 69)))
 ```
 
+### Min 3 Active Reference Tanks `r if (nchar(needs_tank) > 0) paste(' - Deficit:', needs_tank)`
+```{r}
+pct <- length(which(stats$n_co2 > 2)) / (nrow(stats) - 1) * 100
+gauge(round(pct), min = 0, max = 100, symbol = '%',
+      gaugeSectors(c(99, 100), c(80, 98), c(0, 79)))
+```
+
 ### `r strftime(Sys.time(), '%B', 'UTC')` Data Recovery Rate
 ```{r}
-mo <- readRDS('data/stats.rds') %>%
+mo <- stats %>%
   filter(site == 'Total')
 pct <- mo$data_recovery_rate * 100
 gauge(round(pct), min = 0, max = 100, symbol = '%',
-      gaugeSectors(success = c(95, 100),
-                   warning = c(85, 94),
+      gaugeSectors(success = c(90, 100),
+                   warning = c(85, 89),
                    danger  = c(0, 84)))
 ```
 
