--- a/_dash_src.Rmd
+++ b/_dash_src.Rmd
@@ -122,16 +122,34 @@ txt <- paste(round(val), 'ppb')
 flexdashboard::valueBox(txt, color = color, icon = 'fa-tachometer')
 ```
 
-Row
+
+Row {data-height=200}
 --------------------------------------------------------------------------------
 
 ### CO$_2$ Regression RMSE
-```{r}
+
+```{r} 
 plotly::ggplotly(readRDS('data/rmse_co2.rds'))
 ```
 
 ### CH$_4$ Regression RMSE
+
 ```{r}
 plotly::ggplotly(readRDS('data/rmse_ch4.rds'))
 ```
 
+
+Row {data-height=200}
+--------------------------------------------------------------------------------
+
+### CO$_2$ Pre-calibration Bias
+
+```{r} 
+plotly::ggplotly(readRDS('data/cal_offset_co2.rds'))
+```
+
+### CH$_4$ Pre-calibration Bias
+
+```{r}
+plotly::ggplotly(readRDS('data/cal_offset_ch4.rds'))
+```
