--- a/about.Rmd
+++ b/about.Rmd
@@ -10,6 +10,9 @@ title: About UATAQ
 </div>
 <div class="panel-body">
 
+"Climate change is one of the most pressing and difficult issues of our time, and we are committed to doing our part to respond to it through research, teaching, and operations at the University of Utah"
+- University of Utah President David W. Pershing and Board of Trustees
+
 The Utah Atmospheric Trace Gas & Air Quality (UATAQ) lab was started in 2013 as a joint effort between the Global Change and Sustainability Center, the Department of Biology and the Department of Atmospheric Science. The mission of the lab is to collect and analyze long term, high frequency, high precision, and spatially variable trace gas and air quality data with the aim of understanding the spatial distribution and long term trends throughout Salt Lake Valley and Northern Utah. Building on the work of one of the founding members, Dr. Jim Ehleringer, the lab has been responsible for improving and expanding existing networks of instrumentation, developing and implementing new networks with different aims, and building an on campus facility for research, development, and student outreach. UATAQ specializes in the long term measurement of both mobile and in-situ trace gas and criteria pollutants. Our data is calibrated to international standards and we possess numerous years of experience in collecting trace gas data, including one of the longest continuous urban CO2 records in the nation.
 
 #### Research Information
@@ -23,15 +26,15 @@ Land-Atmosphere Interactions Research (LAIR) group home
 Student Director
 
 [Ryan Bares](mailto:ryan.bares@utah.edu)  
-Research Analyst
+UATAQ Lab Manager
 
 [John C. Lin](http://lair.utah.edu)  
 Associate Professor, Atmospheric Sciences
 
-[Dave Bowling](http://biologylabs.utah.edu/bowling/)  
+[David Bowling](http://biologylabs.utah.edu/bowling/)  
 Associate Professor, Biology
 
-[Jim Ehleringer](http://www.biology.utah.edu/people/details.php?id=104)  
+[James Ehleringer](http://www.biology.utah.edu/people/details.php?id=104)  
 Distinguished Professor, Biology
 
 
