--- a/_make_map.Rmd
+++ b/_make_map.Rmd
@@ -1,7 +1,7 @@
 
 <div class="map">
 
-```{r, echo = F, message = F, warning = F}
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
 library(dplyr)
 # library(flexdashboard)
 library(leaflet)
