--- a/tank-request.Rmd
+++ b/tank-request.Rmd
@@ -6,151 +6,120 @@ output:
       in_header: _includes/head.html
 ---
 
-<div class="container-fluid" style="margin-top: 15px;">
-    <div class="panel panel-default span10 offset1">
-      <div class="panel-heading">
-        <h4 class="panel-title"> Compressed cylinder fill request </h4>
-      </div>
-      <div class="panel-body">
-        <ul style="padding-left: 20px">
-          <li>
-            An online form must be submitted with your request and mole fraction per tank request.
-          </li>
-          <li>
-            CO<sub>2</sub> tanks can be filled and calibrated in the range of 300 to 800 ppm.
-          </li>
-          <li>
-            The number of cylinders requested must be equivalent to those returned empty.
-          </li>
-          <li>
-            The target CO<sub>2</sub> is usually within 5 umol/mol near ambient concentration. Values will vary at either end of the range as well as with the addition of another gas like methane.
-          </li>
-          <li>
-            Turnaround time for CO<sub>2</sub> cylinder fills and calibration is 4 to 6 weeks. Cylinders with CO<sub>2</sub> and CH<sub>4</sub> may require additional time for filling and calibration. Please consider this lead-time when making request for tank fills.
-          </li>
-          <li>
-            Questions can be sent to <a href=mailto:tankfillrequest@gmail.com>Maria Garcia</a>.
-          </li>
-        </ul>
-  
-        <hr>
-  
-        <form action="mailto:tankfillrequest@gmail.com?subject=TANK%20FILL%20REQUEST" method="post" enctype="text/plain">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-                <input type="text" class="form-control" name="name" placeholder="Your name(s)">
-              </div>
-            </div>
-          </div>
-  
-          <br>
-  
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="input-group">
+<div class="content-page">
+
+### Compressed reference air FAQ
+
+- An online form must be submitted with your request and mole fraction per tank request.
+- CO<sub>2</sub> tanks can be filled and calibrated in the range of 300 to 800 ppm.
+- The number of cylinders requested must be equivalent to those returned empty.
+- The target CO<sub>2</sub> is usually within 5 umol/mol near ambient concentration. Values will vary at either end of the range as well as with the addition of another gas like methane.
+- Turnaround time for CO<sub>2</sub> cylinder fills and calibration is 4 to 6 weeks. Cylinders with CO<sub>2</sub> and CH<sub>4</sub> may require additional time for filling and calibration. Please consider this lead-time when making request for tank fills.
+- Specific questions can be sent to <a href=mailto:tankfillrequest@gmail.com>Maria Garcia</a>.
+
+<br>
+
+### Request tanks
+
+<!--html_preserve-->
+<form action="https://formspree.io/tankfillrequest@gmail.com" method="post">
+    <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+        <input type="text" class="form-control" name="name" placeholder="Your name(s)">
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-phone fa-fw"></i></span>
                 <input type="text" class="form-control" name="phone" placeholder="Phone number">
-              </div>
             </div>
-            <div class="col-sm-6">
-              <div class="input-group">
+        </div>
+        <div class="col-sm-6">
+            <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-envelope fa-fw"></i></span>
                 <input type="text" class="form-control" name="email" placeholder="Email address">
-              </div>
             </div>
-          </div>
-  
-          <br>
-  
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="input-group">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-exclamation fa-fw"></i></span>
                 <textarea class="form-control" name="notes" rows="3" placeholder="Note(s)"></textarea>
-              </div>
             </div>
-          </div>
-  
-          <hr>
-  
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-hashtag"></i></span>
-                <input type="text" class="form-control" name="qty" value="1">
-              </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="input-group">
+                <span class="input-group-addon">#</span>
+                <input type="text" class="form-control" name="qty-1" value="1">
             </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
                 <span class="input-group-addon">CO<sub>2</sub></span>
-                <input type="text" class="form-control" name="co2" placeholder="400ppm">
-              </div>
+                <input type="text" class="form-control" name="co2-1" placeholder="400ppm">
             </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
                 <span class="input-group-addon">CH<sub>4</sub></span>
-                <input type="text" class="form-control" name="ch4" placeholder="1.9ppm">
-              </div>
+                <input type="text" class="form-control" name="ch4-1" placeholder="1.9ppm">
             </div>
-          </div>
-  
-          <br>
-  
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-hashtag"></i></span>
-                <input type="text" class="form-control" name="qty" placeholder="0">
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
-                <span class="input-group-addon">CO<sub>2</sub></span>
-                <input type="text" class="form-control" name="co2" placeholder="400ppm">
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
-                <span class="input-group-addon">CH<sub>4</sub></span>
-                <input type="text" class="form-control" name="ch4" placeholder="1.9ppm">
-              </div>
-            </div>
-          </div>
-  
-          <br>
-  
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-hashtag"></i></span>
-                <input type="text" class="form-control" name="qty" placeholder="0">
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
-                <span class="input-group-addon">CO<sub>2</sub></span>
-                <input type="text" class="form-control" name="co2" placeholder="400ppm">
-              </div>
-            </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="input-group">
-                <span class="input-group-addon">CH<sub>4</sub></span>
-                <input type="text" class="form-control" name="ch4" placeholder="1.9ppm">
-              </div>
-            </div>
-          </div>
-  
-          <br>
-  
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <button type="submit" value="send" class="btn btn-danger btn-block">Submit</button>
-            </div>
-          </div>
-        </form>
-      </div><!--/panel-body-->
-    </div><!--/panel-->
-</div><!--/container-->
+        </div>
+    </div>
 
+    <br>
+
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="input-group">
+                <span class="input-group-addon">#</span>
+                <input type="text" class="form-control" name="qty-2" placeholder="0">
+            </div>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
+                <span class="input-group-addon">CO<sub>2</sub></span>
+                <input type="text" class="form-control" name="co2-2" placeholder="400ppm">
+            </div>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
+                <span class="input-group-addon">CH<sub>4</sub></span>
+                <input type="text" class="form-control" name="ch4-2" placeholder="1.9ppm">
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="input-group">
+                <span class="input-group-addon">#</span>
+                <input type="text" class="form-control" name="qty-3" placeholder="0">
+            </div>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
+                <span class="input-group-addon">CO<sub>2</sub></span>
+                <input type="text" class="form-control" name="co2-3" placeholder="400ppm">
+            </div>
+        </div>
+        <div class="col-sm-4 col-xs-6">
+            <div class="input-group">
+                <span class="input-group-addon">CH<sub>4</sub></span>
+                <input type="text" class="form-control" name="ch4-3" placeholder="1.9ppm">
+            </div>
+        </div>
+    </div>
+    <br>
+    <div align="center">
+      <button type="submit" value="send" class="btn btn-danger" style="min-width:400px; margin">Submit</button>
+    </div>
+</form>
+
+<!--/html_preserve-->
